# Raspberry_Pi_Bare_Metal

./: CMakeLists.txt  README.md  build.sh  flash.sh
src/: boot.s  startup.c
src/common/: datatypes.h
src/kernel/: main.c  vector_table.c
sysroot/: kernel.img
targets/: rpi1.cmake  rpi1.ld
